<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity"
    >

    <AutoCompleteTextView
        android:id="@+id/startText"
        android:layout_width="159dp"
        android:layout_height="42dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:hint="@string/start"
        android:textColorHint="@color/palcholderClr"
        app:layout_constraintBottom_toTopOf="@+id/desText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <AutoCompleteTextView
        android:id="@+id/desText"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="36dp"
        android:hint="@string/destination"
        android:textColorHint="@color/palcholderClr"
        app:layout_constraintBottom_toTopOf="@+id/searchBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"

        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="122dp"
        android:layout_marginLeft="122dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="137dp"
        android:layout_marginRight="137dp"
        android:layout_marginBottom="94dp"
        android:text="@string/des1"
        android:textColor="@color/powedClr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBtn" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="293dp"
        android:layout_height="36dp"
        android:layout_marginTop="100dp"
        android:text="@string/des2"
        android:textColor="@color/powedClr"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/startText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="51dp"
        android:layout_height="55dp"
        android:layout_marginStart="296dp"
        android:layout_marginLeft="296dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="31dp"
        android:background="@drawable/ic_swap_horiz_black_24dp"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="80dp"
        android:layout_height="42dp"
        android:layout_marginStart="124dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/background_light"
        android:onClick="onClick1"
        android:text="@string/des3"
        android:textColor="@color/powedClr"
        app:layout_constraintEnd_toStartOf="@+id/swapBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desText" />

    <Button
        android:id="@+id/swapBtn"
        android:layout_width="55dp"
        android:layout_height="47dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/ic_swap_vert_black_24dp"
        android:text="@string/non"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/searchBtn"
        app:layout_constraintTop_toBottomOf="@+id/desText"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>